--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 
-matrix:
+before_script:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi    sh -e /etc/init.d/xvfb start; fi
+
+  matrix:
     include:
       - os: linux
         sudo: required
