--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "A hobby project creating a simple ecosystem sim.",
     "main": "compiled/src/main.js",
     "scripts": {
-        "prestart": "npm install && npm run compile",
+        "prestart": "npm install && npm run compile && npm run lint",
         "start": "cross-env NODE_ENV=development npm run electron",
         "cleanup": "rimraf compiled/src",
         "copy-html": "mkdirp compiled/src/ && cpx src/renderer/index.html compiled/src",
         "compile": "npm run cleanup && webpack --config webpack.config.js && npm run copy-html",
         "tsc": "tsc",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "npm run lint",
+        "lint": "tslint `find src -name '*.ts*'` `find test -name '*.ts*'`",
         "electron": "electron ."
     },
     "repository": {
