--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,13 @@ matrix:
       dist: trusty
     - os: osx
       osx_image: xcode7.3
+      
+deploy:
+  provider: releases
+  api_key: $GITHUB_OAUTH_TOKEN
+  skip_cleanup: true
+  on:
+    tags: true
 
 cache:
   directories:
