--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
 
+branches:
+  only:
+  - master
+  
 matrix:
   include:
     - os: linux
@@ -11,6 +15,13 @@ matrix:
       dist: trusty
     - os: osx
       osx_image: xcode7.3
+      
+deploy:
+  provider: releases
+  api_key: $GITHUB_OAUTH_TOKEN
+  skip_cleanup: true
+  on:
+    tags: true
 
 cache:
   directories:
