--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "rimraf": "^2.6.2",
         "rollup": "^0.65.1",
         "rollup-plugin-typescript": "^0.8.1",
+        "rxjs": "^6.3.2",
         "sinon": "^6.1.5",
         "ts-loader": "^4.0.0",
         "ts-node": "^7.0.1",
