--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "copy-html": "mkdirp compiled/src/ && cpx src/renderer/index.html compiled/src",
         "compile": "npm run cleanup && rollup -c && npm run copy-html",
         "tsc": "tsc",
-        "unit-tests": "NODE_ENV=test electron-mocha --require ts-node/register test/**/*_spec.ts{,x}",
+        "unit-tests": "cross-env NODE_ENV=test electron-mocha --require ts-node/register test/**/*_spec.ts{,x}",
         "test": "npm run lint && npm run unit-tests",
         "lint": "tslint src/**/*.ts{,x} test/**/*.ts{,x}",
         "electron": "electron ."
