some rollup changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,12 @@
         "strict": true,
         "sourceMap": true,
         "skipLibCheck": true,
-        "allowJs": true,
+        "allowJs": false,
         "jsx": "react",
         "lib": ["es2015", "es2017", "dom"]
     },
     "exclude": [
       "node_modules",
-      "src/main"
+      "compiled/**"
     ]
 }
