--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "rollup-plugin-typescript2": "^0.8.1",
         "rxjs": "^6.3.2",
         "sinon": "^6.1.5",
+        "ts-node": "^7.0.1",
         "tslint": "^5.11.0"
     },
     "dependencies": {
