making this more cross platform

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "scripts": {
         "postinstall": "electron-builder install-app-deps",
         "pack": "cross-env DEBUG=electron-builder electron-builder build",
-        "prestart": "npm install && npm run build && npm run lint",
-        "start": "cross-env NODE_ENV=development npm run electron",
+        "prestart": "run-s build lint",
+        "start": "pnpm run electron",
         "cleanup": "rimraf dist/*.js",
-        "build": "npm run cleanup && rollup -c",
+        "prebuild": "npm run cleanup",
+        "build": "rollup -c",
         "tsc": "tsc",
-        "unit-tests": "cross-env NODE_ENV=test electron-mocha --require ts-node/register test/**/*_spec.ts",
-        "test": "npm run lint && npm run unit-tests",
+        "unit-tests": "electron-mocha --require ts-node/register test/**/*_spec.ts",
+        "test": "run-s lint unit-tests",
         "lint": "tslint --fix --project ./tslint.json",
         "electron": "electron ."
     },
@@ -47,11 +48,9 @@
         "@types/react-dom": "^16.0.11",
         "@types/sinon": "^5.0.7",
         "chai": "^4.2.0",
-        "concurrently": "^4.1.0",
         "cpx": "^1.5.0",
-        "cross-env": "^5.2.0",
         "electron": "^2.0.16",
-        "electron-builder": "^20.38.4",
+        "electron-builder": "^20.38.5",
         "electron-mocha": "^6.0.4",
         "jsdom": "^12.2.0",
         "mkdirp": "^0.5.1",
